hphp/test/zend/good/ext/spl/tests/iterator_006.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('simplexml')) print "skip SimpleXML required";
}
