hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_isCloneable_001.php.skipif
<?php if (!extension_loaded('simplexml') || !extension_loaded('xmlwriter')) die("skip SimpleXML and XMLWriter is required for this test"); ?>